--- a/src/index.css
+++ b/src/index.css
@@ -109,6 +109,7 @@
     font-weight: 600;
     line-height: 0.75rem;
     color: #667085;
+    letter-spacing: -0.5px;
   }
   .custom-table-cell {
     background-color: #122030;
@@ -121,6 +122,8 @@
     padding: 8px;
     font-weight: 400;
     font-size: 14px;
+    color: white;
+    letter-spacing: -0.5px;
   }
   .custom-scrollbar {
     &::-webkit-scrollbar {
@@ -137,5 +140,28 @@
       -webkit-box-shadow: inset 0 0 4px #080f17;
       border-radius: 6px;
     }
+  }
+  .sticky-table {
+    & td:nth-child(1),
+    & th:nth-child(1) {
+      position: sticky;
+      left: 0;
+      z-index: 5;
+    }
+    th:nth-child(1) {
+      z-index: 6;
+    }
+    th {
+      position: sticky;
+      top: 0;
+      z-index: 2;
+    }
+  }
+  .custom-card-cell-text {
+    color: white;
+    font-weight: 400;
+    font-size: 15px;
+    padding-top: 0.25rem;
+    padding-bottom: 0.25rem;
   }
 }
