--- a/src/index.css
+++ b/src/index.css
@@ -148,14 +148,14 @@
       left: 0;
       z-index: 5;
     }
-    th:nth-child(1) {
-      z-index: 6;
-    }
     th {
       position: sticky;
       top: 0;
       z-index: 2;
     }
+  }
+  .sticky-table > table > thead > tr > th:nth-child(1) {
+    z-index: 10;
   }
   .custom-card-cell-text {
     color: white;
